--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.valentino.questionbank">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,7 +29,14 @@
             android:name=".shared.MainActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"/>
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".student.answer.AnswerQuestionActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".instructor.AddQuestionActivity" />
+        <activity android:name=".instructor.AddFolderActivity" />
+        <activity android:name=".instructor.QuestionOverviewActivity" />
+        <activity android:name=".student.courses.JoinCourseActivity"></activity>
     </application>
 
 </manifest>
